pkginclude_HEADERS =    libmikey/exception.h \
			libmikey/KeyAgreement.h \
			libmikey/KeyAgreementPKE.h \
			libmikey/KeyAgreementDHHMAC.h \
			libmikey/KeyAgreementDH.h \
			libmikey/KeyAgreementPSK.h \
			libmikey/KeyAgreementRSAR.h \
			libmikey/KeyValidity.h \
			libmikey/Mikey.h \
			libmikey/MikeyDefs.h \
			libmikey/MikeyException.h \
			libmikey/MikeyMessage.h \
			libmikey/MikeyPayloadCERT.h \
			libmikey/MikeyPayloadCHASH.h \
			libmikey/MikeyPayloadDH.h \
			libmikey/MikeyPayloadERR.h \
			libmikey/MikeyPayloadGeneralExtension.h \
			libmikey/MikeyPayload.h \
			libmikey/MikeyPayloadHDR.h \
			libmikey/MikeyPayloadID.h \
			libmikey/MikeyPayloadKEMAC.h \
			libmikey/MikeyPayloadKeyData.h \
			libmikey/MikeyPayloadPKE.h \
			libmikey/MikeyPayloadRAND.h \
			libmikey/MikeyPayloadSIGN.h \
			libmikey/MikeyPayloadSP.h \
			libmikey/MikeyPayloadT.h \
			libmikey/MikeyPayloadV.h \
			libmikey/MikeyCsIdMap.h \
			libmikey/libmikey_config.h

noinst_HEADERS = 	config.h

MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in \
			$(srcdir)/compilation_config.h.in \
			$(srcdir)/compilation_config.h.in~
