pkginclude_HEADERS =    libminisip/STUN.h \
			libminisip/STUNMessage.h \
			libminisip/STUNAttributes.h \
			libminisip/STUNTest.h \
			libminisip/CryptoContext.h \
			libminisip/RtcpPacket.h \
			libminisip/RtcpReport.h \
			libminisip/RtcpReportReceptionBlock.h \
			libminisip/RtcpReportRR.h \
			libminisip/RtcpReportSDES.h \
			libminisip/RtcpReportSenderInfo.h \
			libminisip/RtcpReportSR.h \
			libminisip/RtcpReportXR.h \
			libminisip/RtpHeader.h \
			libminisip/RtpPacket.h \
			libminisip/SDESChunk.h \
			libminisip/SDES_CNAME.h \
			libminisip/SDES_EMAIL.h \
			libminisip/SDESItem.h \
			libminisip/SDES_LOC.h \
			libminisip/SDES_NAME.h \
			libminisip/SDES_NOTE.h \
			libminisip/SDES_PHONE.h \
			libminisip/SDES_TOOL.h \
			libminisip/SRtpPacket.h \
			libminisip/XRReportBlock.h \
			libminisip/XRVoIPReportBlock.h \
			libminisip/SdpHeader.h \
			libminisip/SdpHeaderA.h \
			libminisip/SdpHeaderC.h \
			libminisip/SdpHeaderM.h \
			libminisip/SdpHeaderO.h \
			libminisip/SdpHeaderS.h \
			libminisip/SdpHeaderT.h \
			libminisip/SdpHeaderV.h \
			libminisip/SdpPacket.h \
			libminisip/AudioMedia.h \
			libminisip/DtmfSender.h \
			libminisip/Media.h \
			libminisip/MediaCommandString.h \
			libminisip/MediaHandler.h \
			libminisip/MediaStream.h \
			libminisip/RtpReceiver.h \
			libminisip/Session.h \
			libminisip/SessionRegistry.h \
			libminisip/AlsaCard.h \
			libminisip/AlsaSoundDevice.h \
			libminisip/DirectSoundDevice.h \
			libminisip/FileSoundDevice.h \
			libminisip/FileSoundSource.h \
			libminisip/OssSoundDevice.h \
			libminisip/SilenceSensor.h \
			libminisip/SoundDevice.h \
			libminisip/SoundIO.h \
			libminisip/SoundSource.h \
			libminisip/SoundRecorderCallback.h \
			libminisip/SoundIOPLCInterface.h \
			libminisip/SpAudio.h \
			libminisip/FloatResampler.h \
			libminisip/Resampler.h \
			libminisip/SimpleResampler.h \
			libminisip/Codec.h \
			libminisip/G711CODEC.h \
			libminisip/codec_g711.h \
			libminisip/SPEEXCODEC.h \
			libminisip/DefaultDialogHandler.h \
			libminisip/PresenceMessageContent.h \
			libminisip/Sip.h \
			libminisip/SipDialogConfVoip.h \
			libminisip/SipDialogPresenceClient.h \
			libminisip/SipDialogPresenceServer.h \
			libminisip/SipDialogSecurityConfig.h \
			libminisip/SipDialogVoip.h \
			libminisip/SipSoftPhoneConfiguration.h \
			libminisip/IpProvider.h \
			libminisip/SimpleIpProvider.h \
			libminisip/StunIpProvider.h \
			libminisip/ConfCallback.h \
			libminisip/ConfMember.h \
			libminisip/ConferenceControl.h \
			libminisip/Bell.h \
			libminisip/ConsoleDebugger.h \
			libminisip/LogEntry.h \
			libminisip/MessageRouter.h \
			libminisip/Minisip.h \
			libminisip/ContactDb.h \
			libminisip/MXmlPhoneBookIo.h \
			libminisip/PhoneBook.h \
			libminisip/Gui.h \
			libminisip/GuiCallback.h

			
			




noinst_HEADERS = 	config.h


