nobase_include_HEADERS =    libminisip/aec/aecfix.h \
			libminisip/aec/aec.h \
			libminisip/codecs/Codec.h \
			libminisip/gui/LogEntry.h \
			libminisip/gui/Gui.h \
			libminisip/gui/Bell.h \
			libminisip/gui/ConsoleDebugger.h \
			libminisip/mediahandler/MediaCommandString.h \
			libminisip/mediahandler/RtpReceiver.h \
			libminisip/mediahandler/DtmfSender.h \
			libminisip/mediahandler/MediaStream.h \
			libminisip/mediahandler/AudioMedia.h \
			libminisip/mediahandler/SessionRegistry.h \
			libminisip/mediahandler/MediaHandler.h \
			libminisip/mediahandler/Media.h \
			libminisip/mediahandler/Session.h \
			libminisip/mediahandler/CallRecorder.h \
			libminisip/p2t/SipDialogP2Tuser.h \
			libminisip/p2t/SipDialogP2T.h \
			libminisip/p2t/RtcpTransactionGrantFloor.h \
			libminisip/p2t/GroupListUserElement.h \
			libminisip/p2t/RtcpAPPHeader.h \
			libminisip/p2t/RtcpAPP.h \
			libminisip/p2t/GroupListClient.h \
			libminisip/p2t/RtcpSender.h \
			libminisip/p2t/P2T.h \
			libminisip/p2t/RtcpTransactionIdleFloor.h \
			libminisip/p2t/RtcpTransactionReleaseFloor.h \
			libminisip/p2t/RtcpTransactionGetFloor.h \
			libminisip/p2t/GroupListServer.h \
			libminisip/p2t/RtcpReceiver.h \
			libminisip/p2t/RtcpTransactionTakenFloor.h \
			libminisip/p2t/GroupList.h \
			libminisip/rtp/RtcpReportSenderInfo.h \
			libminisip/rtp/XRVoIPReportBlock.h \
			libminisip/rtp/SDES_LOC.h \
			libminisip/rtp/SDES_NAME.h \
			libminisip/rtp/RtcpDebugMonitor.h \
			libminisip/rtp/XRReportBlock.h \
			libminisip/rtp/SDES_CNAME.h \
			libminisip/rtp/RtcpReport.h \
			libminisip/rtp/RtcpReportSR.h \
			libminisip/rtp/SDESItem.h \
			libminisip/rtp/RtpHeader.h \
			libminisip/rtp/SRtpPacket.h \
			libminisip/rtp/SDESChunk.h \
			libminisip/rtp/SDES_TOOL.h \
			libminisip/rtp/RtpPacket.h \
			libminisip/rtp/RtcpPacket.h \
			libminisip/rtp/SDES_EMAIL.h \
			libminisip/rtp/RtcpReportRR.h \
			libminisip/rtp/RtcpReportXR.h \
			libminisip/rtp/SDES_NOTE.h \
			libminisip/rtp/RtcpReportSDES.h \
			libminisip/rtp/CryptoContext.h \
			libminisip/rtp/SDES_PHONE.h \
			libminisip/rtp/RtcpReportReceptionBlock.h \
			libminisip/sdp/SdpHeader.h \
			libminisip/sdp/SdpHeaderA.h \
			libminisip/sdp/SdpHeaderC.h \
			libminisip/sdp/SdpHeaderM.h \
			libminisip/sdp/SdpHeaderO.h \
			libminisip/sdp/SdpPacket.h \
			libminisip/sdp/SdpHeaderS.h \
			libminisip/sdp/SdpHeaderT.h \
			libminisip/sdp/SdpHeaderV.h \
			libminisip/sip/SipDialogConfVoip.h \
			libminisip/sip/SipDialogVoip.h \
			libminisip/sip/Sip.h \
			libminisip/sip/SipDialogPresenceClient.h \
			libminisip/sip/SipDialogVoipServer.h \
			libminisip/sip/SipDialogVoipServer100rel.h \
			libminisip/sip/DefaultDialogHandler.h \
			libminisip/sip/PresenceMessageContent.h \
			libminisip/sip/SipDialogVoipClient.h \
			libminisip/sip/SipSoftPhoneConfiguration.h \
			libminisip/sip/SipDialogPresenceServer.h \
			libminisip/soundcard/Resampler.h \
			libminisip/soundcard/SoundRecorderCallback.h \
			libminisip/soundcard/WaveSoundDevice.h \
			libminisip/soundcard/SoundIOPLCInterface.h \
			libminisip/soundcard/AudioMixer.h \
			libminisip/soundcard/SoundSource.h \
			libminisip/soundcard/FileSoundSource.h \
			libminisip/soundcard/AudioMixerSpatial.h \
			libminisip/soundcard/OssSoundDevice.h \
			libminisip/soundcard/SoundDevice.h \
			libminisip/soundcard/SilenceSensor.h \
			libminisip/soundcard/SoundIO.h \
			libminisip/soundcard/AudioMixerSimple.h \
			libminisip/soundcard/SoundDriver.h \
			libminisip/soundcard/SoundDriverRegistry.h \
			libminisip/spaudio/SpAudio.h \
			libminisip/video/mixer/ImageMixer.h \
			libminisip/video/grabber/Grabber.h \
			libminisip/video/display/VideoDisplay.h \
			libminisip/video/codec/AVDecoder.h \
			libminisip/video/codec/AVCoder.h \
			libminisip/video/codec/VideoCodec.h \
			libminisip/video/codec/VideoEncoderCallback.h \
			libminisip/video/ImageHandler.h \
			libminisip/video/VideoException.h \
			libminisip/video/VideoMedia.h \
			libminisip/conference/ConferenceControl.h \
			libminisip/conference/ConfMember.h \
			libminisip/conference/ConfCallback.h \
			libminisip/conference/ConfMessageRouter.h \
			libminisip/configbackend/ConfBackend.h \
			libminisip/configbackend/UserConfig.h \
			libminisip/configbackend/OnlineConfBackend.h \
			libminisip/contactdb/MXmlPhoneBookIo.h \
			libminisip/contactdb/OnlineMXmlPhoneBookIo.h \
			libminisip/contactdb/ContactDb.h \
			libminisip/contactdb/PhoneBook.h \
			libminisip/ipprovider/SimpleIpProvider.h \
			libminisip/ipprovider/StunIpProvider.h \
			libminisip/ipprovider/IpProvider.h \
			libminisip/Minisip.h \
			libminisip/libminisip_config.h \
			libminisip/zrtp/ZrtpHostBridgeMinisip.h


noinst_HEADERS = 	config.h

MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in \
			$(srcdir)/compilation_config.h.in \
			$(srcdir)/compilation_config.h.in~
