nobase_include_HEADERS =    libminisip/media/aec/aecfix.h \
			libminisip/media/aec/aec.h \
			libminisip/media/codecs/Codec.h \
			libminisip/gui/LogEntry.h \
			libminisip/gui/Gui.h \
			libminisip/gui/Bell.h \
			libminisip/gui/ConsoleDebugger.h \
			libminisip/media/MediaCommandString.h \
			libminisip/media/DtmfSender.h \
			libminisip/media/AudioMedia.h \
			libminisip/media/SubsystemMedia.h \
			libminisip/media/Media.h \
			libminisip/media/RealtimeMedia.h \
			libminisip/media/ReliableMedia.h \
			libminisip/media/ReliableMediaServer.h \
			libminisip/media/MediaStream.h \
			libminisip/media/RtpReceiver.h \
			libminisip/media/CallRecorder.h \
			libminisip/signaling/p2t/SipDialogP2Tuser.h \
			libminisip/signaling/p2t/SipDialogP2T.h \
			libminisip/signaling/p2t/RtcpTransactionGrantFloor.h \
			libminisip/signaling/p2t/GroupListUserElement.h \
			libminisip/signaling/p2t/RtcpAPPHeader.h \
			libminisip/signaling/p2t/RtcpAPP.h \
			libminisip/signaling/p2t/GroupListClient.h \
			libminisip/signaling/p2t/RtcpSender.h \
			libminisip/signaling/p2t/P2T.h \
			libminisip/signaling/p2t/RtcpTransactionIdleFloor.h \
			libminisip/signaling/p2t/RtcpTransactionReleaseFloor.h \
			libminisip/signaling/p2t/RtcpTransactionGetFloor.h \
			libminisip/signaling/p2t/GroupListServer.h \
			libminisip/signaling/p2t/RtcpReceiver.h \
			libminisip/signaling/p2t/RtcpTransactionTakenFloor.h \
			libminisip/signaling/p2t/GroupList.h \
			libminisip/media/rtp/RtcpReportSenderInfo.h \
			libminisip/media/rtp/XRVoIPReportBlock.h \
			libminisip/media/rtp/SDES_LOC.h \
			libminisip/media/rtp/SDES_NAME.h \
			libminisip/media/rtp/RtcpDebugMonitor.h \
			libminisip/media/rtp/XRReportBlock.h \
			libminisip/media/rtp/SDES_CNAME.h \
			libminisip/media/rtp/RtcpReport.h \
			libminisip/media/rtp/RtcpReportSR.h \
			libminisip/media/rtp/SDESItem.h \
			libminisip/media/rtp/RtpHeader.h \
			libminisip/media/rtp/SRtpPacket.h \
			libminisip/media/rtp/SDESChunk.h \
			libminisip/media/rtp/SDES_TOOL.h \
			libminisip/media/rtp/RtpPacket.h \
			libminisip/media/rtp/RtcpPacket.h \
			libminisip/media/rtp/SDES_EMAIL.h \
			libminisip/media/rtp/RtcpReportRR.h \
			libminisip/media/rtp/RtcpReportXR.h \
			libminisip/media/rtp/SDES_NOTE.h \
			libminisip/media/rtp/RtcpReportSDES.h \
			libminisip/media/rtp/CryptoContext.h \
			libminisip/media/rtp/SDES_PHONE.h \
			libminisip/media/rtp/RtcpReportReceptionBlock.h \
			libminisip/signaling/sdp/SdpHeader.h \
			libminisip/signaling/sdp/SdpHeaderA.h \
			libminisip/signaling/sdp/SdpHeaderC.h \
			libminisip/signaling/sdp/SdpHeaderI.h \
			libminisip/signaling/sdp/SdpHeaderM.h \
			libminisip/signaling/sdp/SdpHeaderO.h \
			libminisip/signaling/sdp/SdpPacket.h \
			libminisip/signaling/sdp/SdpHeaderS.h \
			libminisip/signaling/sdp/SdpHeaderT.h \
			libminisip/signaling/sdp/SdpHeaderV.h \
			libminisip/signaling/sip/SipDialogConfVoip.h \
			libminisip/signaling/sip/SipDialogVoip.h \
			libminisip/signaling/sip/Sip.h \
			libminisip/signaling/sip/SipDialogPresenceClient.h \
			libminisip/signaling/sip/SipDialogVoipServer.h \
			libminisip/signaling/sip/DefaultDialogHandler.h \
			libminisip/signaling/sip/PresenceMessageContent.h \
			libminisip/signaling/sip/SipDialogVoipClient.h \
			libminisip/signaling/sip/SipSoftPhoneConfiguration.h \
			libminisip/signaling/sip/SipDialogPresenceServer.h \
			libminisip/media/soundcard/Resampler.h \
			libminisip/media/soundcard/SoundRecorderCallback.h \
			libminisip/media/soundcard/SoundIOPLCInterface.h \
			libminisip/media/soundcard/AudioMixer.h \
			libminisip/media/soundcard/SoundSource.h \
			libminisip/media/soundcard/FileSoundSource.h \
			libminisip/media/soundcard/FileSoundDevice.h \
			libminisip/media/soundcard/AudioMixerSpatial.h \
			libminisip/media/soundcard/SoundDevice.h \
			libminisip/media/soundcard/SilenceSensor.h \
			libminisip/media/soundcard/SoundIO.h \
			libminisip/media/soundcard/AudioMixerSimple.h \
			libminisip/media/soundcard/SoundDriver.h \
			libminisip/media/soundcard/SoundDriverRegistry.h \
			libminisip/media/spaudio/SpAudio.h \
			libminisip/media/video/mixer/ImageMixer.h \
			libminisip/media/video/grabber/Grabber.h \
			libminisip/media/video/display/VideoDisplay.h \
			libminisip/media/video/codec/AVDecoder.h \
			libminisip/media/video/codec/AVCoder.h \
			libminisip/media/video/codec/VideoCodec.h \
			libminisip/media/video/codec/VideoEncoderCallback.h \
			libminisip/media/video/ImageHandler.h \
			libminisip/media/video/VideoException.h \
			libminisip/media/video/VideoMedia.h \
			libminisip/signaling/conference/ConferenceControl.h \
			libminisip/signaling/conference/ConfMember.h \
			libminisip/signaling/conference/ConfCallback.h \
			libminisip/signaling/conference/ConfMessageRouter.h \
			libminisip/config/ConfBackend.h \
			libminisip/config/UserConfig.h \
			libminisip/config/OnlineConfBackend.h \
			libminisip/contacts/ContactDb.h \
			libminisip/contacts/PhoneBook.h \
			libminisip/ipprovider/SimpleIpProvider.h \
			libminisip/ipprovider/StunIpProvider.h \
			libminisip/ipprovider/IpProvider.h \
			libminisip/Minisip.h \
			libminisip/MinisipExceptions.h \
			libminisip/libminisip_config.h \
			libminisip/media/zrtp/ZrtpHostBridgeMinisip.h


noinst_HEADERS = 	config.h

MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in \
			$(srcdir)/compilation_config.h.in \
			$(srcdir)/compilation_config.h.in~
